# skyhook

./: .gitmodules  CMakeLists.txt  README.md  build_artifacts.sh  build_artifacts_in_docker_image.sh  clean_artifacts.sh
kit/channels/skyhookComposition/: README.md  channel_properties.json  generate_configs.py
source/: CMakeLists.txt  client-manifest.json  manifest.json  server-manifest.json
source/account-holder-transport/: CMakeLists.txt  LinkAccountHolder.cpp  LinkAccountHolder.h  LinkAccountHolderSingleReceive.cpp  LinkAccountHolderSingleReceive.h  S3Manager.cpp  S3Manager.h  SkyhookTransportAccountHolder.cpp  SkyhookTransportAccountHolder.h
source/common/: Link.cpp  Link.h  LinkAddress.cpp  LinkAddress.h  LinkMap.cpp  LinkMap.h  SkyhookTransport.cpp  SkyhookTransport.h  curlwrap.h  log.cpp  log.h
source/public-user-transport/: CMakeLists.txt  SkyhookTransportPublicUser.cpp  SkyhookTransportPublicUser.h
source/user-model/: CMakeLists.txt  LinkUserModel.cpp  LinkUserModel.h  SkyhookBaseUserModel.cpp  SkyhookBaseUserModel.h
